--- a/app/assets/index.hbs
+++ b/app/assets/index.hbs
@@ -5,8 +5,9 @@
     {{#if INCLUDE_BASE}}
     <base href="/wallet/">
     {{/if}}
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="format-detection" content="telephone=no">
     <title>{{title}}</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' blob: https://www.google.com/; worker-src 'self' blob:;
