--- a/app/assets/stylesheets/components/_account-create.scss
+++ b/app/assets/stylesheets/components/_account-create.scss
@@ -117,6 +117,7 @@ div.account-creation {
     }
 
     .additional-account-options {
+        white-space: pre-line;
         text-align: left;
         padding-top: 1rem;
         margin-top: 1rem;
