--- a/app/assets/stylesheets/components/_exchange.scss
+++ b/app/assets/stylesheets/components/_exchange.scss
@@ -120,13 +120,13 @@ div#CenterContent {
 
     &.fixed-table {
         table-layout: fixed;
-        text-align: right;
+        text-align: left;
     }
 
     > thead > tr > th {
         font-size: 14px;
         padding: 5px 5px;
-        text-align: right;
+        text-align: left !important;
     }
 
     > tbody > tr > td {
@@ -578,7 +578,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .borrow-price-label {
     display: inline-block;
-    min-width: 40%;
+    min-width: 36.5%;
 }
 
 .borrow-price-final {
