Fixing header's username not fully appearing

--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -2794,7 +2794,7 @@
     min-width: 0; /* or some value */
     .text {
         white-space: nowrap;
-        overflow: hidden;
+        overflow: visible;
         text-overflow: ellipsis;
         text-align: right;
     }
