--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -193,7 +193,7 @@ ul.dropdown.header-menu {
             cursor: not-allowed;
             opacity: 50%;
 
-            svg > path {
+            svg path {
                 fill: grey !important;
             }
         }
