--- a/app/assets/stylesheets/components/_voting.scss
+++ b/app/assets/stylesheets/components/_voting.scss
@@ -33,7 +33,7 @@
                     }
                 }
             }
-            svg > path {
+            svg path {
                 fill: grey;
             }
         }
