--- a/app/assets/stylesheets/themes/_theme-template.scss
+++ b/app/assets/stylesheets/themes/_theme-template.scss
@@ -349,7 +349,7 @@
     .font-secondary {
         color: $secondary-text-color;
     }
-    svg > path {
+    svg path {
         transition: all 0.3s ease 0s;
     }
     #content-wrapper {
@@ -534,12 +534,12 @@
             color: $link-text-color;
         }
     }
-    .icon > svg > path {
+    .icon > svg path {
         fill: $primary-text-color;
     }
     .footer {
         @include color($secondary-text-color, $panel-bg-color);
-        svg > path {
+        svg path {
             fill: $secondary-text-color;
         }
         .logo .version {
@@ -675,12 +675,12 @@
     .header a.button.create-account {
         transition: color 0s !important;
         color: $button-bg-color !important;
-        > span > svg > path {
+        > span > svg path {
             fill: $button-bg-color;
         }
         &:hover {
             color: lighten($button-bg-color, 10%) !important;
-            > span > svg > path {
+            > span > svg path {
                 fill: lighten($button-bg-color, 10%);
             }
         }
@@ -772,7 +772,7 @@
             }
         }
     }
-    .header-container span.icon.lock-unlock > svg > path {
+    .header-container span.icon.lock-unlock > svg path {
         fill: $button-bg-color;
     }
     .header-dropdown-sub-link.enabled {
@@ -812,13 +812,13 @@
                 @include RobotoMedium;
             }
         }
-        svg > path {
+        svg path {
             fill: #fff;
         }
         // svg:hover > path { fill: $primary-text-color; }
     }
     .settings-cog {
-        svg > path {
+        svg path {
             fill: $secondary-text-color;
         }
     }
@@ -1351,13 +1351,13 @@
     }
     .icon.success {
         padding-right: 0.5rem;
-        > svg > path {
+        > svg path {
             fill: $success-color;
         }
     }
     .icon.error {
         padding-right: 0.5rem;
-        > svg > path {
+        > svg path {
             fill: $warning-color;
         }
     }
@@ -1525,7 +1525,7 @@
         li {
             > a {
                 color: $account-dimmed;
-                .icon > svg > path {
+                .icon > svg path {
                     fill: $account-dimmed;
                 }
             }
@@ -1533,7 +1533,7 @@
             > a.active {
                 background-color: $bg-color !important;
                 color: $primary-text-color;
-                .icon > svg > path {
+                .icon > svg path {
                     fill: $primary-text-color;
                 }
             }
@@ -1793,13 +1793,13 @@
         }
     }
     .api-node {
-        .icon.shuffle svg > path {
+        .icon.shuffle svg path {
             fill: $button-bg-color !important;
         }
-        .icon.link svg > path {
+        .icon.link svg path {
             fill: $positive-color !important;
         }
-        .icon.minus-circle svg > path {
+        .icon.minus-circle svg path {
             fill: $negative-color !important;
         }
         &:nth-child(odd) {
@@ -2055,7 +2055,7 @@
                     }
                 }
 
-                .icon.locked > svg > path {
+                .icon.locked > svg path {
                     fill: $button-bg-color;
                 }
             }
@@ -2081,13 +2081,13 @@
                 background-color: $account-cells;
                 color: $account-primarytext;
                 border-color: $account-border;
-                .icon > svg > path {
+                .icon > svg path {
                     fill: $account-primarytext;
                 }
-                .icon.locked > svg > path {
+                .icon.locked > svg path {
                     fill: $button-bg-color;
                 }
-                .icon.unlocked > svg > path {
+                .icon.unlocked > svg path {
                     fill: $button-bg-color;
                 }
             }
@@ -2106,7 +2106,7 @@
                     > a {
                         color: grey;
                     }
-                    svg > path {
+                    svg path {
                         fill: grey;
                     }
                 }
@@ -2138,19 +2138,19 @@
     .api-status {
         .low {
             color: $bid-color;
-            > svg > path {
+            > svg path {
                 fill: $bid-color;
             }
         }
         .medium {
             color: $call-color;
-            > svg > path {
+            > svg path {
                 fill: $call-color;
             }
         }
         .high {
             color: $ask-color;
-            > svg > path {
+            > svg path {
                 fill: $ask-color;
             }
         }
@@ -2300,7 +2300,7 @@
     .order-5 .flip-arrow {
         display: none;
     }
-    .order-book-button-h svg > path {
+    .order-book-button-h svg path {
         fill: #fff;
         &:hover {
             fill: $bs-blue;
@@ -2314,7 +2314,7 @@
         .order-book-button-v {
             display: inline-block;
             margin-left: 5px;
-            svg > path {
+            svg path {
                 fill: #fff;
                 &:hover {
                     fill: $bs-blue;
@@ -2657,7 +2657,7 @@
         }
     }
     .icon-fill {
-        svg > path {
+        svg path {
             fill: $light-text-color;
             &:hover {
                 fill: $bs-blue;
