--- a/app/components/Icon/icon.scss
+++ b/app/components/Icon/icon.scss
@@ -65,7 +65,7 @@ span.icon-10x {
     margin: 24px 0 24px 0;
 }
 
-.icon.fill-black > svg > path {
+.icon.fill-black > svg path {
     fill: black;
 }
 
