add creditoffer page
add credit offer modal

complete creditoffer create action

add my credit offer table

Complete the Loan Administration Checklist

Complete the repayment function

complete credit offer

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -94,6 +94,20 @@
     padding: 1rem 2rem 1rem 2rem;
 }
 
+.modal-table {
+    .ant-table {
+        .ant-table-placeholder {
+            min-height: 0;
+        }
+    }
+}
+
+.text-cursor {
+    .ant-calendar-picker-input {
+        cursor: text;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .modal {
         width: 100%;
